--- a/onepage-template-03-tema-voce-fitness/cadastro.html
+++ b/onepage-template-03-tema-voce-fitness/cadastro.html
@@ -33,40 +33,25 @@
         </div>
 
     </header>
-    <div class="form container">
-        <form>
+
+        <form class="container2">
+
             <div class="form-header">
-                <div class="title">
+
                     <h1>Cadastre-se</h1>
-                </div>
-                <div class="login-button">
-                    <div>
-                        <button><a href="login.html">Paciente</a></button>
-                    </div>
-                    <div>
-                        <button><a href="login.html">Funcionário</a></button>
-                    </div>
-                </div>
+                <button class="botao1"><a href="login.html">Paciente</a></button>
+
+                <button class="botao1"><a href="login.html">Funcionário</a></button>
             </div>
 
             <div class="input-group">
                 <div class="input-box">
-                    <label for="firstname">Primeiro Nome</label>
-                    <input id="firstname" type="text" name="firstname" placeholder="Digite seu primeiro nome" required>
-                </div>
-
-                <div class="input-box">
-                    <label for="lastname">Sobrenome</label>
-                    <input id="lastname" type="text" name="lastname" placeholder="Digite seu sobrenome" required>
+                    <label for="firstname">Nome Completo</label>
+                    <input id="firstname" type="text" name="firstname" placeholder="Digite O Nome Completo" required>
                 </div>
                 <div class="input-box">
                     <label for="email">E-mail</label>
                     <input id="email" type="email" name="email" placeholder="Digite seu e-mail" required>
-                </div>
-
-                <div class="input-box">
-                    <label for="number">Celular</label>
-                    <input id="number" type="tel" name="number" placeholder="(xx) xxxx-xxxx" required>
                 </div>
 
                 <div class="input-box">
@@ -75,56 +60,14 @@
                 </div>
 
                 <div class="input-box">
-                    <label for="confirmPassword">Confirme sua Senha</label>
-                    <input id="confirmPassword" type="password" name="confirmPassword"
-                        placeholder="Digite sua senha novamente" required>
-                </div>
-
-                <div class="input-box">
                     <label for="cpf">CPF</label>
                     <input id="cpf" type="text" name="cpf" placeholder="Digite seu CPF" required>
                 </div>
-
-                <div class="input-box">
-                    <label for="Endereco">Endereço</label>
-                    <input id="endereco" type="text" name="endereco" placeholder="Rua/Cidade/Estado" required>
-                </div>
-
-                <div class="gender-inputs">
-                    <div class="gender-title">
-                        <h6>Gênero</h6>
-                    </div>
-
-                    <div class="gender-group">
-                        <div class="gender-input">
-                            <input id="female" type="radio" name="gender">
-                            <label for="female">Feminino</label>
-                        </div>
-
-                        <div class="gender-input">
-                            <input id="male" type="radio" name="gender">
-                            <label for="male">Masculino</label>
-                        </div>
-
-                        <div class="gender-input">
-                            <input id="others" type="radio" name="gender">
-                            <label for="others">Outros</label>
-                        </div>
-
-                        <div class="gender-input">
-                            <input id="none" type="radio" name="gender">
-                            <label for="none">Prefiro não dizer</label>
-                        </div>
-                    </div>
-                </div>
-
             </div>
-
-            <div class="continue-button">
-                <button type="button" id="submit"><a href="login.html">Cadastrar</a></button>
-            </div>
+                <button type="button" class="continue-button" id="submit"><a href="login.html">Cadastrar</a></button>
+            
         </form>
-    </div>
+    
 </body>
     <script src="js/register.js"></script>
     <script src="js/bootstrap.min.js"></script>
