--- a/onepage-template-03-tema-voce-fitness/login.html
+++ b/onepage-template-03-tema-voce-fitness/login.html
@@ -39,7 +39,7 @@
 
 
           <div class="form-control2">
-            <input type="password" class="password" placeholder="Password" />
+            <input type="password" class="password" placeholder="Password" id="password"/>
             <small class="password-error-2"></small>
             <span></span>
           </div>
