--- a/onepage-template-03-tema-voce-fitness/cadastro.html
+++ b/onepage-template-03-tema-voce-fitness/cadastro.html
@@ -47,11 +47,11 @@
             <div class="input-group">
                 <div class="input-box">
                     <label for="firstname">Nome Completo</label>
-                    <input id="firstname" type="text" name="firstname" placeholder="Digite O Nome Completo" required>
+                    <input id="name" type="text" name="firstname" placeholder="Digite O Nome Completo" required>
                 </div>
                 <div class="input-box">
                     <label for="email">E-mail</label>
-                    <input id="email" type="email" name="email" placeholder="Digite seu e-mail" required>
+                    <input id="email type="email" name="email" placeholder="Digite seu e-mail" required>
                 </div>
 
                 <div class="input-box">
@@ -64,7 +64,7 @@
                     <input id="cpf" type="text" name="cpf" placeholder="Digite seu CPF" required>
                 </div>
             </div>
-                <button type="button" class="continue-button" id="submit"><a href="login.html">Cadastrar</a></button>
+                <button type="button" class="continue-button" id="submit" >Cadastrar</button>
             
         </form>
     
