--- a/onepage-template-03-tema-voce-fitness/cadastro.html
+++ b/onepage-template-03-tema-voce-fitness/cadastro.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class="input-box">
                     <label for="email">E-mail</label>
-                    <input id="email type="email" name="email" placeholder="Digite seu e-mail" required>
+                    <input id="email" type="email"  name="email" placeholder="Digite seu e-mail" required>
                 </div>
 
                 <div class="input-box">
