--- a/onepage-template-03-tema-voce-fitness/cadastro.html
+++ b/onepage-template-03-tema-voce-fitness/cadastro.html
@@ -34,7 +34,7 @@
 
     </header>
 
-        <form class="container2">
+        <form class="container2" id="formulario">
 
             <div class="form-header">
 
