--- a/onepage-template-03-tema-voce-fitness/cadastro.html
+++ b/onepage-template-03-tema-voce-fitness/cadastro.html
@@ -64,7 +64,7 @@
                     <input id="cpf" type="text" name="cpf" placeholder="Digite seu CPF" required>
                 </div>
             </div>
-                <button type="button" class="continue-button" id="submit" >Cadastrar</button>
+                <button type="submit" class="continue-button" id="submit" >Cadastrar</button>
             
         </form>
     
