--- a/onepage-template-03-tema-voce-fitness/cadastro.html
+++ b/onepage-template-03-tema-voce-fitness/cadastro.html
@@ -46,8 +46,8 @@
 
             <div class="input-group">
                 <div class="input-box">
-                    <label for="firstname">Nome Completo</label>
-                    <input id="name" type="text" name="firstname" placeholder="Digite O Nome Completo" required>
+                    <label for="name">Nome Completo</label>
+                    <input id="name" type="text" name="name" placeholder="Digite O Nome Completo" required>
                 </div>
                 <div class="input-box">
                     <label for="email">E-mail</label>
