--- a/onepage-template-03-tema-voce-fitness/login.html
+++ b/onepage-template-03-tema-voce-fitness/login.html
@@ -28,7 +28,7 @@
 
       <div class="form-container login-container">
 
-        <form class="form-lg">
+        <form class="form-lg" id="loginForm">
           <h1>Faça Login</h1>
           <div class="form-control2">
             <input type="email" class="email" placeholder="Email" id="email" />
@@ -61,7 +61,7 @@
 
           </div>
 
-          <a onclick="Bem_vindo()" class="button"id="logar" href="consulta.html">login</a>
+          <button class="button"id="logar" type="submit">login</button>
 
           <a href="cadastro.html" >Registrar-se</a>
           
@@ -70,9 +70,10 @@
 
       </div>
 
-
+  
 
     </div>
+    <script src="js/login.js"></script>
   </body>
 
   
