--- a/onepage-template-03-tema-voce-fitness/feedback.html
+++ b/onepage-template-03-tema-voce-fitness/feedback.html
@@ -3,8 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/feedback.css">
+    <link rel="stylesheet" href="feedback.css">
     <title>Feedback - PSICOSOFT</title>
+
+    <link rel="icon" href="img/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="teste.css">
+
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel='stylesheet'
+        href='https://cdn-uicons.flaticon.com/2.3.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+    <link rel='stylesheet'
+        href='https://cdn-uicons.flaticon.com/2.3.0/uicons-bold-straight/css/uicons-bold-straight.css'>
+    <link rel='stylesheet'
+        href='https://cdn-uicons.flaticon.com/2.3.0/uicons-solid-rounded/css/uicons-solid-rounded.css'>
+    
+
+    <link rel="stylesheet" type="text/css" href="css/fonts-icones.css">
+
 </head>
 <body>
 
@@ -14,7 +30,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="main">
         <section class="feedback-form">
             <div class="container">
                 <h2>Queremos ouvir sua opinião</h2>
@@ -68,7 +84,7 @@
     </main>
 
     <footer>
-        <div class="container">
+        <div class="final">
             <p>&copy; 2024 PSICOSOFT. Todos os direitos reservados.</p>
         </div>
     </footer>
