ajustes no menu BAR

--- a/onepage-template-03-tema-voce-fitness/index.html
+++ b/onepage-template-03-tema-voce-fitness/index.html
@@ -93,16 +93,15 @@
                 <img src="img/logo.png" alt="" class="logotipo">
             </div>
 
-            <div class="menul">
+            
                 <div class="icon icon-menu mobile_action"></div>
                 <ul id="top" class="ul_menu1 main_header_nav">
-                    <li class="li_menu1 main_header_nav_item"><a class="scrollSuave" href="login.html">LOGIN</a></li>
-                    <li class="li_menu1 main_header_nav_item"><a class="scrollSuave" href="cadastro.html">CADASTRAR</a></li>
-                    <li class="li_menu1 main_header_nav_item"><a class="scrollSuave" href="consulta.html">AGENDAR</a></li>
-                    <li class="li_menu1 main_header_nav_item"><a class="scrollSuave" href="index.html">A PSICOSOFT</a></li>
-                    <li class="li_menu1 main_header_nav_item"><a class="scrollSuave" href="feedback.html">FEEDBACK</a></li>
+                    <li class="li_menu1 "><a class="scrollSuave" href="login.html">LOGIN</a></li>
+                    <li class="li_menu1 "><a class="scrollSuave" href="cadastro.html">CADASTRAR</a></li>
+                    <li class="li_menu1 "><a class="scrollSuave" href="consulta.html">AGENDAR</a></li>
+                    <li class="li_menu1 "><a class="scrollSuave" href="index.html">A PSICOSOFT</a></li>
+                    <li class="li_menu1 "><a class="scrollSuave" href="feedback.html">FEEDBACK</a></li>
                 </ul>
-            </div>
         </nav>
 
         <section class="sec1">
