teste js do bot

--- a/onepage-template-03-tema-voce-fitness/bot_web.html
+++ b/onepage-template-03-tema-voce-fitness/bot_web.html
@@ -31,6 +31,6 @@
         </div>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/script_bot.js"></script>
 </body>
 </html>
