melhorias na logica do chatbot + botao recomeçar

--- a/onepage-template-03-tema-voce-fitness/bot_web.html
+++ b/onepage-template-03-tema-voce-fitness/bot_web.html
@@ -13,7 +13,7 @@
                 <img src="img/pisicosoft_logo.png" alt="Logo da Pisicosoft" class="logo"> 
                 <span>Chat Pisicosoft</span>
                 <div class="header-buttons">
-                    <button onclick="recomecarChat()" class="restart-button">🔄 Recomeçar</button>
+                    <button class="restart-button">🔄 Recomeçar</button>
                     <button id="close-chat"><img src="img/close.png" alt="Fechar"></button>
                 </div>
                 <p>Agende suas consultas, acesse seu histórico, confirme atendimentos e conte com a gente em cada etapa do seu cuidado. 💙</p>
