--- a/onepage-template-03-tema-voce-fitness/tele.html
+++ b/onepage-template-03-tema-voce-fitness/tele.html
@@ -6,9 +6,28 @@
   <title>Chamada de Vídeo</title>
   <link rel="stylesheet" href="telcss.css" />
 </head>
+
+
 <body>
-   <iframe src="https://meet.jit.si/testetsetsetestse" title="description"
-   width="80%" height="80%" allow="camera; microphone; fullscreen; display-capture"></iframe>
+        <nav class="menu1">
+            <div>
+                <img src="img/logo.png" alt="" class="logotipo">
+            </div>
+                
+                <ul class="ul_menu1 main_header_nav">
+                    <li class="li_menu1 "><a class="scrollSuave" href="login.html">LOGIN</a></li>
+                    <li class="li_menu1 "><a class="scrollSuave" href="cadastro.html">CADASTRAR</a></li>
+                    <li class="li_menu1 "><a class="scrollSuave" href="consulta.html">AGENDAR</a></li>
+                    <li class="li_menu1 "><a class="scrollSuave" href="index.html">A PSICOSOFT</a></li>
+                    <li class="li_menu1 "><a class="scrollSuave" href="feedback.html">FEEDBACK</a></li>
+                </ul>
+        </nav>
+        
+        <section class="video">
+              <iframe src="https://meet.jit.si/testetsetsetestse" title="description" class="video-call-container"
+              width="80%" height="80%" allow="camera; microphone; fullscreen; display-capture"></iframe>
+        </section>
+
 
 </body>
 </html>
