--- a/onepage-template-03-tema-voce-fitness/consulta.html
+++ b/onepage-template-03-tema-voce-fitness/consulta.html
@@ -36,25 +36,29 @@
 
     </header>
 
-
-    <div class="container">
-
-
-        <h1>Agendamento de Consultas</h1>
+ 
+    <div class="container2">
 
         <form id="appointmentForm">
 
+             <h1>Agendamento de Consultas</h1>
+
+             <div class="grupo">
             <label for="patientName">Nome do Paciente:</label>
-
             <input type="text" id="patientName" name="patientName" required>
-
+             </div>
+            
+             <div>
             <label for="appointmentDate">Data da Consulta:</label>
-
             <input type="date" id="appointmentDate" name="appointmentDate" required>
+             </div>
 
+             <div>
             <label for="appointmentTime">Horário da Consulta:</label>
-
             <input type="time" id="appointmentTime" name="appointmentTime" required>
+             </div>
+
+
 
             <label for="doctor">Médico:</label>
 
