--- a/TCC- Sistema Psicosoft/register.html
+++ b/TCC- Sistema Psicosoft/register.html
@@ -23,11 +23,11 @@
                 </div>
                 <span>ou use seu e-mail para se cadastrar</span>
                 
-                <input type="text" placeholder="Nome" name="nome">
+                <input type="text" placeholder="Nome" name="name">
                 <input type="text" placeholder="CPF" name="cpf">
                 <input type="tel" placeholder="Telefone" name="telefone">
                 <input type="email" placeholder="Email" name="email">
-                <input type="password" placeholder="Senha" name="senha">
+                <input type="password" placeholder="Senha" name="password">
                 
                 <button type="submit">Cadastre-se</button>
 
