--- a/TCC- Sistema Psicosoft/register.html
+++ b/TCC- Sistema Psicosoft/register.html
@@ -38,23 +38,16 @@
         </div>
 
         <div class="form-container sign-in">
-            <form>
+            <form id="login-form"> 
                 <h1>Entrar</h1>
-                <div class="social-icons">
-                    <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
-                </div>
                 <span>ou use seu e-mail e senha</span>
-                <input type="email" placeholder="Email">
-                <input type="password" placeholder="Senha">
+                <input type="email" placeholder="Email" id="login-email">
+                <input type="password" placeholder="Senha" id="login-password">
                 <a href="#">Esqueceu sua senha?</a>
-                <button>Entre</button>
-
-                <div class="form-toggle-mobile">
-                    <p>Não tem uma conta? <a href="#" id="register-mobile">Cadastre-se</a></p>
-                </div>
+                
+                <p id="login-error" style="color: red; font-size: 0.9em;"></p>
+                
+                <button type="submit">Entre</button> 
             </form>
         </div>
 
