--- a/TCC- Sistema Psicosoft/register.html
+++ b/TCC- Sistema Psicosoft/register.html
@@ -55,7 +55,7 @@
 
                 <p id="login-error" style="color: red; font-size: 0.9em;"></p>
                 
-                <button type="submit_login">Entre</button>
+                <button type="submit">Entre</button>
 
                 <div class="form-toggle-mobile">
                     <p>Não tem uma conta? <a href="#" id="register-mobile">Cadastre-se</a></p>
