--- a/TCC- Sistema Psicosoft/register.html
+++ b/TCC- Sistema Psicosoft/register.html
@@ -27,7 +27,7 @@
                 <input type="text" placeholder="CPF" name="cpf">
                 <input type="tel" placeholder="Telefone" name="telefone">
                 <input type="email" placeholder="Email" name="email">
-                <input type="password" placeholder="Senha" name="password">
+                <input type="password" placeholder="Senha" name="senha">
                 
                 <button type="submit">Cadastre-se</button>
 
