--- a/TCC- Sistema Psicosoft/agendar.html
+++ b/TCC- Sistema Psicosoft/agendar.html
@@ -138,6 +138,18 @@
 
             </div>
         </div>
+
+        <div id="notification-modal" class="modal-overlay">
+        <div class="modal-content">
+            <div class="modal-icon-wrapper">
+                </div>
+            <h4 id="modal-title" style="margin-top: 1rem;"></h4>
+            <p id="modal-message" style="margin-bottom: 1.5rem;"></p>
+            <div class="modal-actions">
+                <button id="modal-btn-ok" class="btn-modal-primary">Entendido</button>
+            </div>
+        </div>
+    </div>
     </main>
 
     <button id="open-chat-bot" class="chat-fab" aria-label="Abrir chat de ajuda">
