--- a/TCC- Sistema Psicosoft/register.html
+++ b/TCC- Sistema Psicosoft/register.html
@@ -89,6 +89,18 @@
     </div>
     <div class="mobile-toggle-bg"></div>
 
+    <div id="notification-modal" class="modal-overlay">
+        <div class="modal-content">
+            <div class="modal-icon-wrapper">
+                </div>
+            <h4 id="modal-title" style="margin-top: 1rem;"></h4>
+            <p id="modal-message" style="margin-bottom: 1.5rem;"></p>
+            <div class="modal-actions">
+                <button id="modal-btn-ok" class="btn-modal-primary">Entendido</button>
+            </div>
+        </div>
+    </div>
+
     <canvas id="confetti-canvas"></canvas>
     
     <script src="js/register.js"></script>
