--- a/TCC- Sistema Psicosoft/contato.html
+++ b/TCC- Sistema Psicosoft/contato.html
@@ -16,15 +16,39 @@
     <header class="dashboard-header">
         <div class="container header-container">
             <a href="index.html" class="logo">Psicosoft</a>
+            
             <nav class="main-nav">
                 <ul>
-                    <li><a href="dashboard.html">Meu Painel</a></li>
-                    <li><a href="historico.html">Histórico</a></li>
-                    <li><a href="bem-estar.html">Dicas de Bem-Estar</a></li>
-                    <li><a href="contato.html" class="active">Contato</a></li>
-                    <li><a href="index.html" class="btn-logout">
-                        <i data-lucide="log-out"></i> Sair
-                    </a></li> 
+                    <li>
+                        <a href="dashboard.html">
+                            <i data-lucide="layout-dashboard"></i>
+                            <span>Meu Painel</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="historico.html">
+                            <i data-lucide="history"></i>
+                            <span>Histórico</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="bem-estar.html">
+                            <i data-lucide="sparkles"></i>
+                            <span>Bem-Estar</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="contato.html" class="active">
+                            <i data-lucide="life-buoy"></i>
+                            <span>Contato</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="index.html" class="btn-logout">
+                            <i data-lucide="log-out"></i>
+                            <span>Sair</span>
+                        </a>
+                    </li>
                 </ul>
             </nav>
             <button id="menu-toggle" class="menu-toggle">
@@ -37,11 +61,19 @@
 
     <main>
         <div class="container">
-            <section class="welcome-header">
-                <h1>Contato e Suporte</h1>
-                <p class="subtitle">Precisa de ajuda? Entre em contato conosco.</p>
-            </section>
-
+            <div class="page-header-container">
+                <section class="welcome-header">
+                    <img src="img/pisc_logo.png" alt="Psicosoft Logo" class="page-icon">
+                    <div>
+                        <h1>Contato e Suporte</h1>
+                        <p class="subtitle">Precisa de ajuda? Entre em contato conosco.</p>
+                    </div>
+                </section>
+                <a href="dashboard.html" class="btn-back">
+                    <i data-lucide="arrow-left"></i>
+                    <span>Voltar</span>
+                </a>
+            </div>
             <div class="contact-layout">
                 <div class="contact-info">
                     <h3>Informações de Contato</h3>
