--- a/TCC- Sistema Psicosoft/bot_web.html
+++ b/TCC- Sistema Psicosoft/bot_web.html
@@ -12,7 +12,7 @@
         
         <div class="chat-header">
             <div class="profile">
-                <img src="/img/psicosoft_logo" alt="Bot Profile" class="profile-pic"> 
+                <img src="/img/psicosoft_logo.png" alt="Bot Profile" class="profile-pic"> 
                 <span class="header-title">PsicIA</span>
             </div>
             <button id="menu-toggle" class="menu-toggle" aria-label="Menu">
