--- a/TCC- Sistema Psicosoft/register.html
+++ b/TCC- Sistema Psicosoft/register.html
@@ -23,7 +23,7 @@
                 <span>ou use seu e-mail para se cadastrar</span>
                 
                 <input type="text" placeholder="Nome Completo" name="name" id="register-name"
-                       required minlength="3">
+                       required minlength="6">
                 
                 <input type="tel" placeholder="CPF (apenas números)" name="cpf" id="register-cpf"
                        required pattern="\d{11}" maxlength="11" title="Digite 11 números, sem pontos ou traços.">
@@ -83,12 +83,12 @@
             <div class="toggle">
                 <div class="toggle-panel toggle-left">
                     <h1>Bem vindo de Volta!</h1>
-                    <p>Informe seus dados para acessar todos os recursos do site.</p>
+                    <p>Aqui voce faz Login com seus dados para acessar todos os recursos do site.</p>
                     <button class="hidden" id="login">Entrar</button>
                 </div>
                 <div class="toggle-panel toggle-right">
                     <h1>Olá!</h1>
-                    <p>Registre-se com seus dados pessoais para usar todos os recursos do site.</p>
+                    <p>Registre-se  aqui com seus dados pessoais para usar todos os recursos do site.</p>
                     <button class="hidden" id="register">Cadastre-se</button>
                 </div>
             </div>
