up do painel  gerencial

--- a/TCC- Sistema Psicosoft/admin_dashboard.html
+++ b/TCC- Sistema Psicosoft/admin_dashboard.html
@@ -85,6 +85,15 @@
                     </a>
                 </section>
 
+                <section class="tip-card featured-card animated-border">
+                    <div class="card-icon" style="background-color: var(--accent-1); color: #FFF;">
+                        <i data-lucide="pie-chart"></i>
+                    </div>
+                    <div class="featured-text">
+                        <h3>Relatórios Rápidos</h3>
+                        <p>Acesse relatórios de desempenho e produtividade da clínica rapidamente.</p>
+                    </div>
+                </section>
                 <section class="consultas-widget">
                     <h3>Consultas de Hoje</h3>
                     <div class="table-wrapper">
@@ -118,7 +127,7 @@
                     </ul>
                 </div>
 
-                </aside>
+            </aside>
         </div>
 
         <div id="cancel-modal" class="modal-overlay">
