--- a/TCC- Sistema Psicosoft/admin_dashboard.html
+++ b/TCC- Sistema Psicosoft/admin_dashboard.html
@@ -54,7 +54,8 @@
                 </section>
 
                 <section class="kpi-grid">
-                    <div class="kpi-card">
+                    
+                    <div class="kpi-card animated-border">
                         <div class="kpi-icon" style="background-color: var(--primary-light); color: var(--primary);">
                             <i data-lucide="calendar-check"></i>
                         </div>
@@ -66,7 +67,6 @@
                             <span id="kpi-consultas-canceladas"><strong>0</strong> Canceladas</span>
                         </div>
                     </div>
-                    
                     <div class="kpi-card">
                         <div class="kpi-icon" style="background-color: #E6F6F6; color: var(--accent-2);">
                             <i data-lucide="users"></i>
@@ -85,15 +85,6 @@
                     </a>
                 </section>
 
-                <section class="tip-card featured-card animated-border">
-                    <div class="card-icon" style="background-color: var(--accent-1); color: #FFF;">
-                        <i data-lucide="pie-chart"></i>
-                    </div>
-                    <div class="featured-text">
-                        <h3>Relatórios Rápidos</h3>
-                        <p>Acesse relatórios de desempenho e produtividade da clínica rapidamente.</p>
-                    </div>
-                </section>
                 <section class="consultas-widget">
                     <h3>Consultas de Hoje</h3>
                     <div class="table-wrapper">
