--- a/TCC- Sistema Psicosoft/admin_dashboard.html
+++ b/TCC- Sistema Psicosoft/admin_dashboard.html
@@ -67,6 +67,7 @@
                             <span id="kpi-consultas-canceladas"><strong>0</strong> Canceladas</span>
                         </div>
                     </div>
+                    
                     <div class="kpi-card">
                         <div class="kpi-icon" style="background-color: #E6F6F6; color: var(--accent-2);">
                             <i data-lucide="users"></i>
@@ -76,14 +77,15 @@
                         <p class="kpi-desc">Pacientes únicos no seu histórico.</p>
                     </div>
 
-                    <a href="#" class="kpi-card kpi-action">
-                        <div class="kpi-icon" style="background-color: #F0F0F0; color: var(--text-light);">
-                            <i data-lucide="download"></i>
+                    <a href="bot_web_funcionario.html" class="kpi-card kpi-action">
+                        <div class="kpi-icon" style="background-color: #EBF7FC; color: var(--accent-1);">
+                            <i data-lucide="clipboard-list"></i>
                         </div>
-                        <h4>Relatórios Rápidos</h4>
-                        <p class="kpi-desc">Gerar relatório financeiro semanal.</p>
+                        <h4>Central de Atendimento</h4>
+                        <p class="kpi-desc">Ver detalhes de todas as consultas.</p>
                     </a>
-                </section>
+                    </section>
+
 
                 <section class="consultas-widget">
                     <h3>Consultas de Hoje</h3>
@@ -113,7 +115,7 @@
                     <h4>Ações Rápidas</h4>
                     <ul class="quick-actions">
                         <li><a href="#" class="btn-quick btn-primary"><i data-lucide="plus-circle"></i> Novo Agendamento</a></li>
-                        <li><a href="#" class="btn-quick btn-secondary"><i data-lucide="history"></i> Ver Histórico Completo</a></li>
+                        <li><a href="bot_web_funcionario.html" class="btn-quick btn-secondary"><i data-lucide="history"></i> Ver Histórico Completo</a></li>
                         <li><a href="#" class="btn-quick btn-secondary"><i data-lucide="users"></i> Gerenciar Pacientes</a></li>
                     </ul>
                 </div>
