Ajuste tela Funcionario

--- a/TCC- Sistema Psicosoft/admin_dashboard.html
+++ b/TCC- Sistema Psicosoft/admin_dashboard.html
@@ -7,7 +7,7 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family/Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="css/admin_dashboard.css">
 </head>
@@ -49,7 +49,7 @@
                 <section class="welcome-header">
                     <h1 id="admin-welcome">Carregando...</h1>
                     <p class="subtitle" id="stats-hoje">
-                        Carregando estatísticas do dia...
+                        Carregando seu histórico completo...
                     </p>
                 </section>
 
@@ -59,7 +59,7 @@
                         <div class="kpi-icon" style="background-color: var(--primary-light); color: var(--primary);">
                             <i data-lucide="calendar-check"></i>
                         </div>
-                        <h4>Consultas do Dia</h4>
+                        <h4>Total de Consultas</h4>
                         <span class="kpi-metric" id="kpi-consultas-total">0</span>
                         <div class="kpi-sub-stats">
                             <span id="kpi-consultas-agendadas"><strong>0</strong> Agendadas</span>
@@ -88,13 +88,13 @@
 
 
                 <section class="consultas-widget">
-                    <h3>Consultas de Hoje</h3>
+                    <h3>Histórico de Consultas</h3>
                     <div class="table-wrapper">
                         <table class="consultas-table">
                             <thead>
                                 <tr>
                                     <th>Paciente</th>
-                                    <th>Horário</th>
+                                    <th>Data e Horário</th>
                                     <th>Status</th>
                                     <th>Ação</th>
                                 </tr>
