--- a/TCC- Sistema Psicosoft/index.html
+++ b/TCC- Sistema Psicosoft/index.html
@@ -83,19 +83,29 @@
         <section id="steps" class="content-section">
             <div class="container text-center">
                 <h2>Como é simples agendar:</h2>
+                
                 <div class="steps-layout">
-                    <div class="step">
-                        <div class="step-number">1</div>
+                    
+                    <div class="step fade-in">
+                        <div class="step-icon">
+                            <i data-lucide="mouse-pointer-click"></i>
+                        </div>
                         <h3>Acesse a plataforma</h3>
                         <p>Entre pelo site ou acesse nosso Chat.</p>
                     </div>
-                    <div class="step">
-                        <div class="step-number">2</div>
+
+                    <div class="step fade-in">
+                        <div class="step-icon">
+                            <i data-lucide="calendar-days"></i>
+                        </div>
                         <h3>Escolha o horário</h3>
                         <p>Veja a agenda em tempo real e selecione o melhor dia.</p>
                     </div>
-                    <div class="step">
-                        <div class="step-number">3</div>
+
+                    <div class="step fade-in">
+                        <div class="step-icon">
+                            <i data-lucide="calendar-check"></i>
+                        </div>
                         <h3>Confirme</h3>
                         <p>Pronto! Sua consulta está marcada e o lembrete ativado.</p>
                     </div>
