--- a/TCC- Sistema Psicosoft/index.html
+++ b/TCC- Sistema Psicosoft/index.html
@@ -150,7 +150,7 @@
             </div>
         </div>
     </footer>
-
+    <script src="https://unpkg.com/lucide@latest"></script>
     <script src="/js/scripts.js"></script>
 </body>
 </html>
