Validação Login Funcionario
logica de validação e direcionamento para caso ser um funcionário da clinica será direcionado para o painel administrativo

--- a/TCC- Sistema Psicosoft/agendar.html
+++ b/TCC- Sistema Psicosoft/agendar.html
@@ -95,7 +95,7 @@
                             <select id="profissional" name="profissional">
                                 <option value="">Selecione um profissional</option>
                                 <option value="psicosoft_dr@gmail.com">Dr. André</option>
-                                <option value="psicosoft_dra@gmail.com">Dra. Beatriz</option>
+                                <option value="psicosoft_dr@gmail.com">Dra. Beatriz</option>
                             </select>
                         </div>
 
